# DL_based_BH_reduction

./: .gitignore  .gitmodules  README.md  meson.build
aRTist_project/Spektren/: SpectrumIPVS.xrs  spectrum_mono.xrs
data_analysis_scripts/: calculate_cutted_mean.py  plot_sample_differences.py  plot_tiff.py
dataset_preparation_scripts/: reco_post_processing.py
dataset_preparation_scripts/preprocessing/: preprocess.py
dataset_preparation_scripts/tiff_to_hdf5/: tiff_to_hdf5.py
dataset_preparation_scripts/tiff_to_hdf5/parameter_files/: dimension_hdf5.txt  type_hdf5.txt
dataset_preparation_scripts/tiff_to_hdf5/stuff/: compare_volumes.py  maye_needed.py  stefan_dbg.ipynb  stefan_dbg.py
models/: CNN_ai_ct.py  CNN_ai_ct_old.py  CNN_ai_ct_silu.py  CNN_ai_ct_skip.py  CNN_ai_ct_trans_skip.py  IRR_CNN_ai_ct.py  PerceiverModel.py  Unet.py  dataloader.py  datasets.json  debug_datasets.json  parseTorchScript.py  removeBeamHardening.py  runModel.py  train.py  utils.py  visualization.py
models/checkpoints/: cnn-ai-ct_cgfb_v0_trace.pt  cnn-ai-ct_cgs_v0_trace.pt  cnn-ai-ct_schraube_v2_val_ep27_trace.pt  cnn-ai-ct_spielzeugmotor_v4_trace.pt  cnn-ai-ct_zuendkerze_v0_trace.pt
models/test_cases/: test_dataloader.py
src/: CMakeLists.txt  CNNAiCt.cpp  CNNAiCt.hpp  ExtFilterPytorchModel.cpp  ExtFilterPytorchModel.json  meson.build
subprojects/: git-submodules-update-careful
test_data/: test_file.hdf5  volume.hdf5  volume.vgi
tools/: build.sh  testNormalizations.py
